# ChangeLog for dev-db/tdodbc
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*tdodbc-13.10.00.01.1-r1 (24 Mar 2011)

  24 Mar 2011; Alexandre Nuno Oliveira <anm@gentoo.org>
  +tdodbc-13.10.00.01.1-r1.ebuild:
  added amd64 arch + openmotif support + cleanup so fewer changes needed for
  next versions
