@@ -2,6 +2,12 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*tdodbc-13.10.00.01.1-r2 (28 Mar 2011)
+
+  28 Mar 2011; Alexandre Nuno Oliveira <anm@gentoo.org>
+  +tdodbc-13.10.00.01.1-r2.ebuild:
+  tdodbc-13.10.00.01.1-r2 solves insecure RUNPATHs QA issues
+
 *tdodbc-13.10.00.01.1-r1 (24 Mar 2011)
 
   24 Mar 2011; Alexandre Nuno Oliveira <anm@gentoo.org>
